ubiquity (17.04.1) UNRELEASED; urgency=medium

  * Update sources to zesty.
  * Add partman-swapfile d-i component.
  * Automatic update of included source packages: choose-mirror
    2.73ubuntu1, flash-kernel 3.0~rc.4ubuntu65, partman-auto 134ubuntu6,
    partman-auto-lvm 59ubuntu2, partman-basicfilesystems 127ubuntu2,
    partman-btrfs 23ubuntu1, preseed 1.71ubuntu4.
  * Pacify pycodestyle 2.0.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 01 Dec 2016 13:29:35 +0000

ubiquity (16.10.13) yakkety; urgency=medium

  [ Blaze ]
  * Port to PyQT5.

  [ Mathieu Trudel-Lapierre ]
  * Automatic update of included source packages: preseed 1.71ubuntu3.
  * Finish porting to PyQt5.
  * Various small UI tweaks to support GTK 3.20. (LP: #1614848, #1617711)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Thu, 06 Oct 2016 19:30:10 -0400

ubiquity (16.10.12) yakkety; urgency=medium

  * Automatic update of included source packages: base-installer
    1.158ubuntu4, console-setup 1.142ubuntu5, hw-detect 1.117ubuntu3.
  * data/ubiquity.desktop.in: run ubiquity in sudo rather than depending on
    pkexec to do the right thing. (LP: #1189875)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 05 Oct 2016 15:04:21 -0400

ubiquity (16.10.11) yakkety; urgency=medium

  [ Simon Steinbeiß ]
  * Account for larger harddrives in the partition size spinbutton.
    (LP: #1622258)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 13 Sep 2016 10:07:18 -0400

ubiquity (16.10.10) yakkety; urgency=medium

  [ Mathieu Trudel-Lapierre ]
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu64, netcfg 1.138ubuntu2, partman-auto 134ubuntu3.
  * ubi-prepare.py: default to disabling Secure Boot when third party drivers
    are being installed, since it's most likely what people will want. This
    will also avoid people skipping through this important part of the
    installer without noticing, only to find their systems not all working